deloyments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-image-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-image
  template:
    metadata:
      labels:
        app: web-image
    spec:
      containers:
      - name: web-image
        image: awankhede/web-image:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
