pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-image
  labels:
    app: web-image
spec:
  restartPolicy: Always
  containers:
  - name: web-image
    image: awankhede/web-image:latest
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 9090
