service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-image-service
spec:
  selector:
    app: web-image
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
